crates/lmml-tui/src/tabs/snapshots/lmml_tui__tabs__tests__server_ready.snap
---
source: crates/lmml-tui/src/tabs/mod.rs
assertion_line: 404
expression: render_app(&app)
---
"┌lmml | runtime: auto | build: upstream──────────────────────────────────────────────────────────────────────┐"
"│ 1 Detect │ 2 Build │ 3 Models │ 4 Server │ 5 Settings                                                      │"
"└────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Server──────────────────────────────────────────┐┌Server Log────────────────────────────────────────────────┐"
"│Press s to stop server.                         ││server listening                                          │"
"│Press v: engine auto/upstream/prism (now auto). ││                                                          │"
"│Press p to switch the selected model's runtime p││                                                          │"
"│Status: Ready { url: "http://127.0.0.1:8080" }  ││                                                          │"
"│Profile: custom/global                          ││                                                          │"
"│Selected model: llama.gguf                      ││                                                          │"
"│Runtime: upstream                               ││                                                          │"
"│Runtime commit: unknown                         ││                                                          │"
"│Binary: $HOME/.local/share/lmml/llama.cpp││                                                          │"
"│Host: 127.0.0.1                                 ││                                                          │"
"│Port: 8080                                      ││                                                          │"
"│Context: 262144                                 ││                                                          │"
"│GPU layers: auto -> -1                          ││                                                          │"
"│Batch: 512                                      ││                                                          │"
"│Threads: 8                                      ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"└────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────┘"
"lmml  Server: ready http://127.0.0.1:8080  Ready  [?] Help  [q] Quit                                          "
