crates/lmml-tui/src/tabs/snapshots/lmml_tui__tabs__tests__server_starting.snap
---
source: crates/lmml-tui/src/tabs/mod.rs
expression: render_app(&app)
---
"┌lmml────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ 1 Detect │ 2 Build │ 3 Models │ 4 Server │ 5 Settings                                                      │"
"└────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Server──────────────────────────────────────────┐┌Server Log────────────────────────────────────────────────┐"
"│Press s to stop server.                         ││Server log will appear here.                              │"
"│Press p to switch runtime profile.              ││                                                          │"
"│Status: Starting { elapsed: 500ms }             ││                                                          │"
"│Profile: custom/global                          ││                                                          │"
"│Selected model: No model selected               ││                                                          │"
"│Runtime: not resolved                           ││                                                          │"
"│Runtime commit: unknown                         ││                                                          │"
"│Binary: $HOME/.local/share/lmml/llama.cpp││                                                          │"
"│Host: 127.0.0.1                                 ││                                                          │"
"│Port: 8080                                      ││                                                          │"
"│Context: 4096                                   ││                                                          │"
"│GPU layers: auto -> -1                          ││                                                          │"
"│Batch: 512                                      ││                                                          │"
"│Threads: 8                                      ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"└────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────┘"
"lmml  Server: starting 0s  Ready  [?] Help  [q] Quit                                                          "
