crates/lmml-tui/src/tabs/snapshots/lmml_tui__tabs__tests__settings_default.snap
---
source: crates/lmml-tui/src/tabs/mod.rs
expression: render_app(&app)
---
"┌lmml────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ 1 Detect │ 2 Build │ 3 Models │ 4 Server │ 5 Settings                                                      │"
"└────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Settings────────────────────────────────────────┐┌Compatibility─────────────────────────────────────────────┐"
"│Up/Down select. e edits. Space toggles. s saves.││Binary: $HOME/.local/share/lmml/llama.cpp/build/bin│"
"│State path: $HOME/.config/lmml/state.toml││Press p to probe llama-server capabilities.               │"
"│                                                ││                                                          │"
"│  build_runtime upstream  [e]                   ││No unsupported flag warnings.                             │"
"│  runtime       auto  [e]                       ││                                                          │"
"│> host          127.0.0.1  [e]                  ││                                                          │"
"│  port          8080  [e]                       ││                                                          │"
"│  ctx_size      4096  [e]                       ││                                                          │"
"│  n_gpu_layers  -1  [e]                         ││                                                          │"
"│  batch_size    512  [e]                        ││                                                          │"
"│  ubatch_size   512  [e]                        ││                                                          │"
"│  threads       8  [e]                          ││                                                          │"
"│  flash_attn    true  [Space]                   ││                                                          │"
"│  mlock         false  [Space]                  ││                                                          │"
"│  api_key         [e]                           ││                                                          │"
"│  jinja         false  [Space]                  ││                                                          │"
"│  chat_template   [e]                           ││                                                          │"
"│  extra_args      [e]                           ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"└────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────┘"
"lmml  Server: stopped  Ready  [?] Help  [q] Quit                                                              "
