crates/lmml-tui/src/tabs/snapshots/lmml_tui__tabs__tests__settings_modal_unsupported_flags.snap
---
source: crates/lmml-tui/src/tabs/mod.rs
expression: render_app(&app)
---
"┌lmml | runtime: auto | build: upstream──────────────────────────────────────────────────────────────────────┐"
"│ 1 Detect │ 2 Build │ 3 Models │ 4 Server │ 5 Settings                                                      │"
"└────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Settings────────────────────────────────────────┐┌Compatibility─────────────────────────────────────────────┐"
"│Up/Down select. e edits. Space toggles. s saves.││Binary: $HOME/.local/share/lmml/llama.cpp/build/bin│"
"│State path: $HOME/.config/lmml/state.toml││Version: llama-server test                                │"
"│                                                ││Flags parsed: 2                                           │"
"│  build_runtime upstream  [e]                   ││                                                          │"
"│  runtime       auto  [e]                       ││Unsupported settings:                                     │"
"│  host          127.0.0.1  [e]                  ││! --flash-attn not available in this llama-server build   │"
"│> port          8080  [e]                       ││                                                          │"
"│  ctx_size      4096  [e]                       ││                                                          │"
"│  n_gpu_layers  -1  [e]                         ││                                                          │"
"│  batch_size    512  [e]                        ││                                                          │"
"│  ubatch_size   512  [┌Edit Setting──────────────────────────────────────────────────┐                      │"
"│  threads       8  [e]│port:                                                         │                      │"
"│  flash_attn    true  │                                                              │                      │"
"│  mlock         false │9090                                                          │                      │"
"│  api_key         [e] │                                                              │                      │"
"│  jinja         false │Enter applies. Esc cancels.                                   │                      │"
"│  chat_template   [e] │                                                              │                      │"
"│  extra_args      [e] └──────────────────────────────────────────────────────────────┘                      │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"└────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────┘"
"lmml  Server: stopped  Ready  [?] Help  [q] Quit                                                              "
